Back-end/src/main/java/com/example/error/EntityAlreadyExistsException.java
package com.example.error;

public class EntityAlreadyExistsException extends RuntimeException {

    public EntityAlreadyExistsException(String message) {
        super(message);
    }

}
